2003-10-28  Michael Yount <csf@moscow.com>

	* bin/mj_enqueue:  Cope better with empty messages.
	Thanks to SRE.

	* lib/Mj/BounceHandler.pm:  Rewrite to use messages
	instead of hard-coded English.
	(handle_bounce_message)  Compensate for truncated VERP
	addresses.  Thanks to Jeff Wasilko.

	* lib/Mj/BounceParser.pm:  (parse_dsn)  Cope with DSN
	irregularities.  Thanks to Jeff Wasilko.

	* lib/Mj/CommandProps.pm:  Allow the "reason" action
	to be used in the bounce_rules setting.

	* lib/Mj/Config.pm:  (_compile_rule, _ck_var)  Bugfix:
	Allow variables to be used on the right side of comparisons.
	Thanks to SRE.

	* lib/Mj/SimpleDB/Text.pm:  (get_matching*regexp)  Bugfix:
	Remove anchors before calling Mj::File::search().

2003-10-07  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (_d_post)  Bugfix:  Use the correct
	sublist name when testing for Mj1-style restrict_post groups.

2003-09-22  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (substitute_vars_format)  Bugfix:
	Restore newline replacement trick to preserve formatting
	alignment.  Thanks to Roger Klorese.

2003-09-18  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (substitute_vars_format)  Bugfix:
	Remove backslashes before dollar signs on lines that
	have no substitution variables.  Account for newlines
	in regular expressions.  Thanks to Roger Klorese.

	* lib/Mj/Addr.pm:  (new)  Bugfix:  Unfold the address
	before parsing it.  Thanks to David Miller.

2003-09-14  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (_compile_rule)  Bugfix:  A sublist
	followed by a right paren (e.g., "(!@MAIN)") in a rule
	would result in a syntax error because the paren was discarded.

	* lib/Mj/Util.pm:  (process_rule)  Bugfix:  The default 
	"ignore" is not a terminal action.

2003-09-12  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (configset, configshow, sescape)
	Escape dollar signs to avoid unwanted substitutions.
	Thanks to SRE.

2003-08-30  Michael Yount <csf@moscow.com>
